# genome-foundation-models-project

./: 29552 (1).pickle  29552-peft.pickle  29552.csv  NT-500m-finetuning.py  NT_embeddings.ipynb  README.md  Untitled.ipynb  local_model.py  nucleotide_transformer_dna_sequence_modelling_with_peft.ipynb  prepare_data.py  pyproject.toml  scatter-peft.ipynb  scatter.ipynb  test-colab.py
localtokenizer/: tokenizer_config.json
