[tool.poetry]
name = "genome-foundation-models"
version = "0.1.0"
description = ""
authors = ["Keval Pipalia <keval.pipalia@dialogue.co>"]
readme = "README.md"
packages = [{include = "genome_foundation_models"}]

[tool.poetry.dependencies]
python = "^3.10"
jupyterlab = "^4.0.9"
pandas = "^2.1.4"
dm-haiku = "^0.0.11"
biopython = "^1.81"
scikit-learn = "^1.3.2"
keras = "^3.0.1"
torch = "^2.1.2"
matplotlib = "^3.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
